--- a/packages/rocketchat-i18n/i18n/de.i18n.json
+++ b/packages/rocketchat-i18n/i18n/de.i18n.json
@@ -1582,7 +1582,7 @@
   "Enter_a_tag": "Geben Sie einen Tag ein",
   "Enter_a_username": "Benutzernamen eingeben",
   "Enter_Alternative": "Alternativer Modus (Senden mit Eingabetaste + Strg/Alt/Shift/Command)",
-  "Enter_authentication_code": "Dateisystem für eigene Emojis",
+  "Enter_authentication_code": "Authentifizierungscode Eingeben",
   "Enter_Behaviour": "Verhalten der Eingabetaste:",
   "Enter_Behaviour_Description": "Das verändert, ob die Eingabetaste eine Nachricht versendet oder einen Zeilenumbruch erzeugt",
   "Enter_name_here": "Namen hier eingeben",
